# mcp-server-funasr

./: .gitignore  LICENSE  README.md  README_zh.md  main.py  pyproject.toml  test.py
MCPServer/: README.md  audio_processor.py  requirements.txt  server.py  speech_transcriber.py  vad_processor.py
MCPServer/tests/: test_audio_processor.py  test_speech_transcriber.py  test_vad_processor.py
Model/: Model.md
core/: __init__.py  audio_processor.py  speech_transcriber.py  vad_processor.py
