[project]
name = "mcp-server-funasr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.5.1",
    "funasr>=1.2.6",
    "starlette>=0.46.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "uvicorn>=0.34.2",
]
